fixing auth bugs and adding eye visiblity toggle

--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -7,6 +7,18 @@
   .title {
     margin: 10px 0;
   }
+  .input-container {
+    position: relative;
+  }
+  .eye-icon-container {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .google-icon-container {
+    position: absolute;
+  }
 
   .buttons {
     display: flex;
